# optimize-finetuning-llm

./: .gitignore  README.md  environment.yml  install.sh  ml.sh  pyproject.toml  requirements.txt  slurm-939860.out  smultinode.sh  smultinode_apptainer.sh  submit-batch-wo-node.sh  submit-batch.sh  submit-node.sh  submit.sh  submit_multinode.sh  zero_to_fp32.sh
 .cache/fused_adam/: .ninja_deps  .ninja_log  build.ninja
deepspeed_config/: deepspeed_1.json  deepspeed_3.json  deepspeed_infinity.json  deepspeed_infinity_cpu.json  deepspeed_optim.json
deepspeed_config/deepspeed_old/: deepspeed_2.json  deepspeed_adam.json
scripts/: train.py  train_wo_lora.py
shell/: install-packages.sh  post-install.sh
src/llm_finetune/: arguments.py  data_collator.py  dataset.py  tokenize.py  trainer.py
